# gifcm

./: .bumpversion.cfg  .bumpversion.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-ci.yml
gifcm/: __init__.py  animated_figure.py
notebooks/: examples.ipynb
src/: animated_figure.py
src/gifcm/: __init__.py  animated_figure.py
tests/: animated_figure_test.py
