[project]

name = "gifcm"
description = "Easy gif animation of matplotlib figures"
dynamic = ["version"]  # Use setuptools_scm

readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

keywords = ["gif", "animation", "matplotlib"] 

authors = [
  {name = "Martin Schubert", email = "mfschubert@gmail.com"},
]

maintainers = [
  {name = "Martin Schubert", email = "mfschubert@gmail.com"},
]

dependencies = [
  "matplotlib",
  "numpy",
]

[project.optional-dependencies]
tests = ["parameterized", "pytest"]
dev = ["black", "darglint", "gifcm[tests]", "isort", "mypy"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setupttols_scm]
