[project]

name = "gifcm"
version = "0.1.0"
description = "Easy gif animation of matplotlib figures"
keywords = ["gif", "animation", "matplotlib"]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

authors = [
    {name = "Martin Schubert", email = "mfschubert@gmail.com"},
]
maintainers = [
    {name = "Martin Schubert", email = "mfschubert@gmail.com"},
]

dependencies = [
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
tests = [
    "parameterized",
    "pytest",
]
dev = [
    "bump-my-version",
    "darglint",
    "gifcm[tests]",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
